# ChangeLog for dev-libs/maloc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/maloc/ChangeLog,v 1.25 2014/05/01 12:22:13 jlec Exp $

*maloc-1.5-r1 (01 May 2014)

  01 May 2014; Justin Lecher <jlec@gentoo.org> +maloc-1.5-r1.ebuild,
  metadata.xml:
  Backport upstream change to make it compatible latest apbs

  02 May 2012; Justin Lecher <jlec@gentoo.org> maloc-1.5.ebuild:
  Move to autotools-utils.eclass

  20 Jul 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #105599

  16 Apr 2011; Justin Lecher <jlec@gentoo.org> maloc-1.4.ebuild,
  maloc-1.5.ebuild:
  Moved app-doc/doxygen from RDEPEND to DEPEND

*maloc-1.5 (16 Apr 2011)

  16 Apr 2011; Justin Lecher <jlec@gentoo.org> +maloc-1.5.ebuild:
  Version Bump

  02 Nov 2010; Justin Lecher <jlec@gentoo.org> +files/1.4-doc.patch,
  maloc-1.4.ebuild:
  Fixed automagic doxygen usage

*maloc-1.4 (31 Oct 2010)

  31 Oct 2010; Justin Lecher <jlec@gentoo.org> +files/1.4-asneeded.patch,
  maloc-0.2.1-r3.ebuild, +files/1.4-mpi.patch, +maloc-1.4.ebuild:
  Version Bump

  27 Jun 2010; <nixnut@gentoo.org> maloc-0.2.1-r3.ebuild:
  ppc stable #324321

  22 Jun 2010; Justin Lecher <jlec@gentoo.org> -maloc-0.1.3.ebuild:
  Dropping old version having issues on 64bit, 324321

  21 Jun 2010; Markus Meier <maekke@gentoo.org> maloc-0.2.1-r3.ebuild:
  amd64/x86 stable, bug #324321

*maloc-0.2.1-r3 (09 Jun 2010)

  09 Jun 2010; Justin Lecher <jlec@gentoo.org> -maloc-0.2.1-r2.ebuild,
  +maloc-0.2.1-r3.ebuild:
  Fixing underlinking with USE=mpi

  09 Jun 2010; Justin Lecher <jlec@gentoo.org> -maloc-0.1.2.ebuild,
  -maloc-0.2.1.ebuild:
  Cleaned up old version

  05 May 2010; Justin Lecher <jlec@gentoo.org> +files/0.2.1-asneeded.patch,
  maloc-0.2.1-r2.ebuild:
  As-needed fix

*maloc-0.2.1-r2 (05 May 2010)

  05 May 2010; Justin Lecher <jlec@gentoo.org> -maloc-0.2.1-r1.ebuild,
  +maloc-0.2.1-r2.ebuild:
  rev bump needed
