@@ -7,30 +7,27 @@ AUX 1.4-asneeded.patch 533 SHA256 7c6b2fbe5d159dd2646865b7d182c82d30fd9891959a08
 AUX 1.4-doc.patch 539 SHA256 1d57cf372751ea99eba4156c7933e60574da7790e3e7e8bca9718db65e549ed8 SHA512 7ca3d028c86c6938a51f44f9d7f769702b5a8732bbd98ac9abaee916f25b2b7bad69883844a36a4add055838ce67e779ccc02634aed05bea2704c20b59b5fb67 WHIRLPOOL d1827096e4c72344cac255c9a63c808291a3dd09fe348406de08e1d191253b2538280cbfadcd42cc243fc560e9beea36b38b29ca4d86772eb38ab1102066731b
 AUX 1.4-mpi.patch 652 SHA256 db2d9dcbb369988a08e59cea750df35fc91d0d375204d24df03f9c9b66ca4f93 SHA512 73d00caccb02f5fa94336c63a653e99bccdeebd39d6e10d4c8eaab95a8e4f4b90ac5d1232d781e25e5079c7fdb8038471078cc63ba638579f523e27816e49d43 WHIRLPOOL f07719a7af995ec427041cc9cb30a4ae24648cb044fcde10567ffc3832cff5067b4158a4e195d6fb90641223ea01a72bb6a6935ea8cc860b3e591980b9184888
 DIST maloc-0.2-1.tar.gz 739622 SHA256 9b29c4b6401adf20ce1ab3c47fe71066ca7952eb10db4b1e6b1440973f616cda SHA512 ffe7d3eb70a87521614da469d61300413d1f86010a369505065dadd9431fc74a9366223f60bf1461444e8c68ede5adebc60167cad4ca54a9860d987de6def5c4 WHIRLPOOL 3a1a36428bfc925caedaf14442e713fb6ba84bb7bf12c67312b57b217833bacc4804c303d6a56a31863eb0fd851d340070f114910543d59c970250bc5a13a461
-DIST maloc-1.4.tar.gz 797520 SHA256 cba0c6730f148bf7ddb77dac07e497655642f43b632256fcebf3192b45af1833 SHA512 6c1966334805a537d41d8f835be38e872dd4f8ba48ae9f52294c83677c1995bd455fcc2ac9a1ff4d5c08addb4bcf62f83e0106abd13ceaf9c5fb34fa1e90b8cc WHIRLPOOL 6236705ba8aaeea43e63d6c622c5359f77049178022185873ccf9eade659b38d86c61a9340621a7f3a21269bc284b2884ad98522272ba52cee34faca0547c138
 DIST maloc-1.5.tar.gz 794138 SHA256 58e1197fcd4c74d3cbb1d39d712eb0a3c5886a1e6629f22c5c78ce2bac983fc0 SHA512 9b50ffc0dd2a9c74808783fdc3bcad9dd6fb4ba0edcdad099eb7ab5e9a1f7d5c708db4b6e2a5373adfabd2a013b1cc4f92281905ef108df3fa6376726ca7a62c WHIRLPOOL 5b25dfc1db28712cb1bb4dbcefcfd5e462d1baa8029db462a8be5fa13baf08756804416c6d32231e5e2d42e5a31184f2a6ca255b860744a8a10a31915900781a
 EBUILD maloc-0.2.1-r3.ebuild 1308 SHA256 c9b3122e0119e197572dcc65de537ca14a0a7670e3f199d1d2e96a8585702ecb SHA512 7630db9af0bea2c75f0a3ae1ea53b46be995a6500ebd87559196235a7b238061b9d7bf918c4d6bfbe378126b2222d551260bc05a2a142501c14a446814c24070 WHIRLPOOL 670e85c00a96c495220be2bdcc55768f0b31d5980ad1c137b56168889bd6ea2fae80f8002b75f4a93ab11f57a6ee7c51bdea29769307ff2e44ee29a13a03db8b
-EBUILD maloc-1.4.ebuild 1305 SHA256 56c1f4f8fecf27d6726cdb98d9364dff2941ac5edf9d65d44a794ce1a665b3ee SHA512 21f32a3e6e31aa392d3e6a25f7bcfabafc9a4e60cb9dd5c59366079e9386947d6e106a84453dea5a8bbdb2c07e44bdd96f05867c3acb0e8a285b504fc38c33ec WHIRLPOOL be26eeef4cf0c9b713e8eea36955f9524d608af3b0a5c461ec8ffb7531e86a5bb66a608fb9ae70beda074761613638160ff916ddde09542207bc30c52cea0f89
-EBUILD maloc-1.5-r1.ebuild 1340 SHA256 258a39e05613b51b8b3a3064166cc3dde5802ee945e4c18146526f1ffccf7704 SHA512 c1c0e9d34aee1ba23747702ad6e49234117a6fe3798ee397d967ac266e8a8a94a40494ca7640a14db3b194c65a42de215bd9f67f7615273054f126b102f47eff WHIRLPOOL ab4a3eb219fb3298cecc35e864bca607482260c4f5832d986b16bd93548f7c1c88c0f1318727d203219fa04ddfd1ad24cf2042e0bbf679d2b24e92016c61b5c9
-EBUILD maloc-1.5.ebuild 1162 SHA256 91606675046d15960b7d70670fd1d82a2362746c986e32615f7004856fc0494b SHA512 585d311dae81f5738765a7de1113fb3a7b096b0d36c0f032f39d3237d20778aeadbe3db9520210747a2e66a506364b68c348280f7cc0e062c68925a63fc61f5b WHIRLPOOL 1ad93a8b097f78713372d965b8a38e2e934482b300788f3f5240add14a132f327efc68c635367d5fb7da86d2d47ea4aca493fb7787442282d2cf3805a1716d70
-MISC ChangeLog 3412 SHA256 c044023ba09e7f7b623fd35308be0576b04c352eb9438f3e7c1a2f1ee482a9ab SHA512 c8f25b3b4b98b1871bdc1a0bf38d40135060eeab0f88e5a4d4ffc2d94e9d936a1c03ec70c849dc3657f5c0ef5dedb1d20cd600071849b7c1f8ad7ca92bbfa669 WHIRLPOOL 018b480f3bc53a888360b7ebd113cc7be62dc271e7c9708b020db8766aff7783d2f638ad4c05aac6865369f0071f13ec6716214ecc06eb6a1d29e74fb164a5ae
+EBUILD maloc-1.5-r1.ebuild 1342 SHA256 dead5fbffa573cc4fa81f0aa5669b8272985e36b5d8d5f2787c74a7da7d223d4 SHA512 0051bfdeb7042e846226a9d4a86c567ce2876b62c888517266f49d9362d19f711a6da48688acef7c96bab2bb4e38599920d06d9f2bf0e57e4b908f64df57c35a WHIRLPOOL 76de08e5bbf23ebb027dbddecfeccd162be883835c68ca64777c3eb8e9b680db66232f86284774f6b4a3bf9b13cac6578f08f2cdb4a0a9efc3344f3dc98b2a2f
+MISC ChangeLog 3532 SHA256 e1b689b1ef5503e9cbb8a05611b6563e22b72268b72c59cb3cf1739ed3c63d16 SHA512 2ce3559a05c55ff1f6b5d66a81b486e3dff4199dd9835ac1844f98ee5cc9d3547bdeb66e93fc0651ecd4ca5315e3a97a2cc4859a2413965c370cad60748a555f WHIRLPOOL 05e55c20644f17a16993d41b3134275260df22f752cd4ae8b872f9303b70e84e513bd8225fa346a94f2a8ce52b8a30e104e238c4bae4afbea42e5011fbee5cc6
 MISC metadata.xml 158 SHA256 dae7918daac89b300804812d32584889aa1c4e8b9edeced06006900494457a6d SHA512 e4901a5df84502b46aa85ec01804ce680332cebe6148e4a9c8201a38935ee0d4a753bcdb3f18765b06019926a05bf099c0ed61395aa98211610ab7fdb8d7f895 WHIRLPOOL 2f12466ef66cc7b89ec428cd4b498b20f12ca6dbb219f180ac12985dfc4195882ea95809797828a720fe69a0e560d12de9c271f8aacaa06fba09c9c1ccd589e5
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJTYjyjXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJUqU5QXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir3roP/AkVoX4lm229H3dg5ThkPcSb
-uGANP7NPhF7hnOOlECNk4NpdZedIvcdcxSeCp/e8a5q0k65G/ifIt02pcORaW5Dt
-nS7a2xH09DIxRCB4iATnmxeFnLcFkmPUINg5tGWJd0Y9MzAgfbKW3l4ggnChmVfg
-KkknipK1Y8J8Hcx3+kwcKGnNzbQjR9DfRb61tSHtSKYLBLzU/l6QSqU65zcy66Qy
-LLuTJZCagO50a+bI337KhhN3rT+J/E4jxtj/0kMP3H6qn8LZlT3tg5B/RhRfDNap
-9XO/FksuvuRCGCqDzDdcSFZdm2ZL5Qnpk56zMyInBzHDTY3pmu1VhTHKPk7YPl1b
-gBEdDmlvNemMoP0uBMRNrEMzfuCvq8IInP6mERD/p2yCnXyqwIudbDqzoYlnR67l
-jQZCHQm9bfpp9lE7IwUa2pnN11yBQdhSAdGyhYUK9sV/MM2xddU0kfepb9RgiwuX
-Gj7Y9p9hFlFriind4OWucneWF8aYh4G6NfERZeKNFpFwP1JBEPfkdXyuQ8RcSY73
-y9HZ93oT6BVYJWdrX3hvwQ4Q3y+IpUo19AasOI/1Rw8L617u1ZeiyB9JeUWM7oyb
-lf8LQIgaoFtPTsAcvttwDXiD6z9ppDlu5ljHryn6qvrbZYq4d/B2jasbKILgBo3m
-9h6ZGkjt6uF6iGB/E/FP
-=J77Y
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirXJ0P/1heBKTsCSi7KuklPe5xZ4J5
+nm8bi6+33pQxyh8PQLoC7fp+C7eKLYKkKGTGwJ8oGO2YG1kFCCFL2dJrA6wGz2C1
+Xnq4NDfbJATxOL6sb8rEN+ngsmFANvuYJ1TVgNIVzeibsbtY9EbF+LRHHTgx2G3k
+jWoaVlIUTT7cfcLLYMLPhu3p8dD/wnUtSkYUFC0TELDYaZOxg2Nsez3XkJBsZHN2
+uhzR6rzB5xicoNzL9EQ7r6Gs2R8inSnazd6a0bNglWkKSmpkGZXw91QLRDOx4q6s
+jWoLh4Y7IPeCiNFX5p4Hi2rlvPEPi0kZkU7m9jrblOYTRG19rBgDqHfdF5H3ua5H
+tZwFeX6IsgC+cbjQH/XK58M+u+oE3mS61zbhOTLr20pqiGhTElt26cVf6DmwSszL
+wI5nZxuTyBSZcPOdYij5lcHcRT9dx3SBMuvS/J48EG4SDaSWtCBSwJHX5Z7uav3D
+eW6mNtwlRQbnj0zjidQkdy1yss8rV1sdKRDfvrKHp3+WvicC2IC2w2ABPUTh/mG9
+jBrly9myGyvmRpgYk6a03lviXqJ4Ou0WlwLuAUs9Wl9qVA4UPDLwwBlz/rHaNJy9
+4jnQLrpBrGxM9OC77/fGlMlxLxsCKAw6o37qxybn9lWDst+ZAZeCxQUlo0R5pXs4
+GPijNLCx/C6FEaOJw+IW
+=eq14
 -----END PGP SIGNATURE-----
