@@ -1,13 +1,0 @@
-DEFINED_PHASES=configure install prepare
-DEPEND=sys-libs/readline mpi? ( virtual/mpi ) doc? ( media-gfx/graphviz app-doc/doxygen ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
-DESCRIPTION=Minimal Abstraction Layer for Object-oriented C/C++ programs
-EAPI=3
-HOMEPAGE=http://www.fetk.org/codes/maloc/index.html
-IUSE=doc mpi static-libs
-KEYWORDS=~amd64 ~ppc ~x86 ~amd64-linux ~x86-linux
-LICENSE=GPL-2
-RDEPEND=sys-libs/readline mpi? ( virtual/mpi )
-SLOT=0
-SRC_URI=http://www.fetk.org/codes/download/maloc-1.4.tar.gz
-_eclasses_=autotools	c118b9a8e93bfef124f2d7a2fe56a95e	eutils	f99a767f569b1f0731b3a1edd17c1d11	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=1d0f4f81093251b5333acd94d0096748
