@@ -10,4 +10,4 @@ RDEPEND=sys-libs/readline mpi? ( virtual/mpi )
 SLOT=0
 SRC_URI=http://www.fetk.org/codes/download/maloc-1.5.tar.gz
 _eclasses_=autotools	c118b9a8e93bfef124f2d7a2fe56a95e	autotools-utils	3727db64c7b960903d5033280f108080	eutils	f99a767f569b1f0731b3a1edd17c1d11	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=64abac0b5ceea461215e0b0f8d1a971a
+_md5_=66413b7deb44d6f18aed515df85e2dc9
